--- a/module/styles/content-position.styl
+++ b/module/styles/content-position.styl
@@ -18,6 +18,12 @@ set-margin('.uml',bottom, 20)
 set-margin('pre.source',bottom, 20) 
 set-margin('.level2',bottom, 20) 
 
+.margin-left-auto
+  margin-left: auto
+.margin-right-auto
+  margin-right: auto
+
+
 set-padding('',top, 5)
 set-padding('',right, 5)
 set-padding('pre.source',right, 5)
