--- a/module/styles/text-size.styl
+++ b/module/styles/text-size.styl
@@ -54,6 +54,10 @@ set-font-size('.admonitionblock', '', $admonition-font-size)
   *
     font-size 1em
 
+aside[role=notes]
+  .hands-on
+    font-size 0.6em
+
 section
   &:after
     font-size 1.3rem
