--- a/module/styles/slide-grid.styl
+++ b/module/styles/slide-grid.styl
@@ -43,6 +43,10 @@ section
   grid-template-columns: 2fr 1fr 1fr
   h2
     grid-column: 1 / span 3
+.col-12 
+  grid-template-columns: 1fr 2fr
+  h2
+    grid-column: 1 / span 2
 
 .gap-0
   column-gap 0
