--- a/module/styles/slide-special.styl
+++ b/module/styles/slide-special.styl
@@ -2,6 +2,8 @@ section.title
   background-color $title-color-background
   color $title-color-text
   text-align center
+  a
+    color $title-color-text
   h1, h2
     margin 0.6 auto
     font-size 6rem
@@ -14,7 +16,7 @@ section.title
   h2
     padding 5rem 0 3rem 0
   .personname, .url
-    display: none;
+    display none;
   > ul
     margin 0
     padding 0
@@ -23,7 +25,7 @@ section.title
     line-height 5rem
     margin-bottom 0
   ul.col-2
-    column-count: 2;
+    column-count 2;
   footer.sw
     display none
   &:before
