--- a/module/styles/content-position.styl
+++ b/module/styles/content-position.styl
@@ -19,9 +19,9 @@ set-margin('pre.source',bottom, 20)
 set-margin('.level2',bottom, 20) 
 
 .margin-left-auto
-  margin-left: auto
+  margin-left auto
 .margin-right-auto
-  margin-right: auto
+  margin-right auto
 
 
 set-padding('',top, 5)
@@ -32,6 +32,14 @@ set-padding('',left, 5)
 .padding-left-0
   ul
     padding-left 0
+
+set-small-padding('', 'left', 20)
+set-small-padding('', 'right', 20)
+set-small-padding('', 'top', 20)
+set-small-padding('', 'bottom', 20)
+set-small-all-padding('', 20)
+
+set-all-border('', 10, darkgrey)
 
 set-position(top, 20) 
 set-position(right, 20) 
