--- a/module/styles/slide-grid.styl
+++ b/module/styles/slide-grid.styl
@@ -47,6 +47,10 @@ section
   grid-template-columns: 1fr 2fr
   h2
     grid-column: 1 / span 2
+.col-23
+  grid-template-columns: 2fr 3fr
+  h2
+    grid-column: 1 / span 2
 
 .gap-0
   column-gap 0
